--- a/taks_1.ipynb
+++ b/taks_1.ipynb
@@ -7,13 +7,13 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-11-25T12:42:20.184524391Z",
-     "start_time": "2023-11-25T12:42:04.324392915Z"
+     "end_time": "2023-11-25T13:25:59.067783178Z",
+     "start_time": "2023-11-25T13:25:43.580330463Z"
     }
    },
    "outputs": [],
    "source": [
-    "from utils import load_examples, create_mapping, create_dataset, create_character_dataset\n",
+    "from utils import load_examples, create_mapping, create_character_dataset, perceptron_algorithm_1, evaluate_task_1\n",
     "\n",
     "X_train, y_train, img_train = load_examples('ocr_names_images/trn')\n",
     "X_test, y_test, img_test = load_examples('ocr_names_images/tst')\n",
@@ -29,9 +29,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X_train shape: (4074, 8256)\n",
+      "X_train shape: (4074, 8257)\n",
       "y_train shape: (4074,)\n",
-      "X_test shape: (2118, 8256)\n",
+      "X_test shape: (2118, 8257)\n",
       "y_test shape: (2118,)\n"
      ]
     }
@@ -47,8 +47,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-25T12:42:20.373103669Z",
-     "start_time": "2023-11-25T12:42:20.187145349Z"
+     "end_time": "2023-11-25T13:25:59.331136360Z",
+     "start_time": "2023-11-25T13:25:59.071103941Z"
     }
    },
    "id": "ccaa9a2315528f88"
@@ -58,21 +58,23 @@
    "execution_count": 3,
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[12  0 23 ... 24  1 14]\n"
-     ]
+     "data": {
+      "text/plain": "1.0"
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(y_train)"
+    "W = perceptron_algorithm_1(X_train, y_train, num_classes=len(mapping['characters']))\n",
+    "evaluate_task_1(X_train, y_train, W)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-25T12:42:20.376243881Z",
-     "start_time": "2023-11-25T12:42:20.372648110Z"
+     "end_time": "2023-11-25T13:26:07.731069287Z",
+     "start_time": "2023-11-25T13:25:59.334262988Z"
     }
    },
    "id": "64d29f868c2b50ea"
@@ -85,8 +87,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-25T12:42:20.378690383Z",
-     "start_time": "2023-11-25T12:42:20.375296516Z"
+     "end_time": "2023-11-25T13:26:07.733745140Z",
+     "start_time": "2023-11-25T13:26:07.732380312Z"
     }
    },
    "id": "d1cc965bbdff132b"
