--- a/task_2.ipynb
+++ b/task_2.ipynb
@@ -7,8 +7,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-12-03T15:59:51.234081724Z",
-     "start_time": "2023-12-03T15:59:35.536822638Z"
+     "end_time": "2023-12-07T09:58:10.322836364Z",
+     "start_time": "2023-12-07T09:57:53.353197467Z"
     }
    },
    "outputs": [],
@@ -22,8 +22,8 @@
     "# Create the mapping\n",
     "mapping = create_mapping(y_train)\n",
     "\n",
-    "# %load_ext autoreload\n",
-    "# %autoreload 2"
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
@@ -38,8 +38,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-03T15:59:51.421683233Z",
-     "start_time": "2023-12-03T15:59:51.236932966Z"
+     "end_time": "2023-12-07T09:58:10.491303824Z",
+     "start_time": "2023-12-07T09:58:10.324609491Z"
     }
    },
    "id": "dc6f94764343cdc8"
@@ -63,33 +63,34 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-03T15:59:55.639044875Z",
-     "start_time": "2023-12-03T15:59:51.422738119Z"
+     "end_time": "2023-12-07T09:58:14.775055974Z",
+     "start_time": "2023-12-07T09:58:10.491518013Z"
     }
    },
    "id": "a451fab5503ce481"
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "outputs": [
     {
-     "data": {
-      "text/plain": "0.87"
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.76%\n",
+      "13.00%\n"
+     ]
     }
    ],
    "source": [
-    "classifier.evaluate_test()"
+    "print(f\"Character error {classifier.char_error() * 100:.2f}%\")\n",
+    "print(f\"Sequence error {classifier.seq_error() * 100:.2f}%\")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-03T15:59:55.760219460Z",
-     "start_time": "2023-12-03T15:59:55.632252958Z"
+     "end_time": "2023-12-07T09:59:06.447865187Z",
+     "start_time": "2023-12-07T09:59:06.174712953Z"
     }
    },
    "id": "332e04c4250e8abf"
@@ -102,8 +103,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-03T15:59:55.765850216Z",
-     "start_time": "2023-12-03T15:59:55.760897110Z"
+     "end_time": "2023-12-07T09:58:15.018511008Z",
+     "start_time": "2023-12-07T09:58:15.015182246Z"
     }
    },
    "id": "4f206c3c0543440e"
