--- a/task_3.ipynb
+++ b/task_3.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-11-28T16:34:28.555910836Z",
-     "start_time": "2023-11-28T16:34:12.582358979Z"
+     "end_time": "2023-12-07T10:00:23.621045045Z",
+     "start_time": "2023-12-07T10:00:01.883233471Z"
     }
    },
    "outputs": [],
@@ -20,12 +20,15 @@
     "X_test, y_test, img_test = load_examples('ocr_names_images/tst')\n",
     "\n",
     "# Create mapping\n",
-    "mapping = create_mapping(y_train)"
+    "mapping = create_mapping(y_train)\n",
+    "\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "from src.task_3 import LSCForFixedNumberOfSequences\n",
@@ -35,15 +38,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-28T16:34:28.743078211Z",
-     "start_time": "2023-11-28T16:34:28.555368442Z"
+     "end_time": "2023-12-07T10:00:23.713381343Z",
+     "start_time": "2023-12-07T10:00:23.625725834Z"
     }
    },
    "id": "5531f0039e24dc90"
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stdout",
@@ -59,33 +62,34 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-28T16:34:32.468480923Z",
-     "start_time": "2023-11-28T16:34:28.745663402Z"
+     "end_time": "2023-12-07T10:00:29.385124676Z",
+     "start_time": "2023-12-07T10:00:23.713190045Z"
     }
    },
    "id": "cf0d9f1144da9ac0"
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "outputs": [
     {
-     "data": {
-      "text/plain": "0.974"
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Character error 0.47%\n",
+      "Sequence error 1.80%\n"
+     ]
     }
    ],
    "source": [
-    "classifier.evaluate_test()"
+    "print(f\"Character error {classifier.char_error() * 100:.2f}%\")\n",
+    "print(f\"Sequence error {classifier.seq_error() * 100:.2f}%\")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-28T16:34:32.717707732Z",
-     "start_time": "2023-11-28T16:34:32.469057459Z"
+     "end_time": "2023-12-07T10:17:22.027680680Z",
+     "start_time": "2023-12-07T10:15:22.667046618Z"
     }
    },
    "id": "c070db8032da01f"
