--- a/task_4.ipynb
+++ b/task_4.ipynb
@@ -14,14 +14,14 @@
     "# Create the mapping\n",
     "mapping = create_mapping(y_train)\n",
     "\n",
-    "# %load_ext autoreload\n",
-    "# %autoreload 2"
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-03T16:59:35.038454810Z",
-     "start_time": "2023-12-03T16:59:18.320815498Z"
+     "end_time": "2023-12-07T15:21:22.883488511Z",
+     "start_time": "2023-12-07T15:21:05.667943999Z"
     }
    },
    "id": "initial_id"
@@ -38,8 +38,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-03T16:59:35.221441980Z",
-     "start_time": "2023-12-03T16:59:35.040431848Z"
+     "end_time": "2023-12-07T15:21:23.151104853Z",
+     "start_time": "2023-12-07T15:21:22.885999343Z"
     }
    },
    "id": "f4c93768830458a9"
@@ -52,28 +52,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss on epoch 0: 85.04976268084573\n",
-      "Train accuracy on epoch 0: 0.0\n",
-      "Train loss on epoch 10: 85.04976268084573\n",
-      "Train accuracy on epoch 10: 0.0\n",
-      "Train loss on epoch 20: 85.04976268084573\n",
-      "Train accuracy on epoch 20: 0.0\n",
-      "Train loss on epoch 30: 85.04976268084573\n",
-      "Train accuracy on epoch 30: 0.0\n",
-      "Train loss on epoch 40: 85.04976268084573\n",
-      "Train accuracy on epoch 40: 0.0\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[3], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[43mclassifier\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mtrain\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n",
-      "File \u001B[0;32m~/school/ssu/ssu_lab_1/src/task_4.py:71\u001B[0m, in \u001B[0;36mStructuredOutputSVM.train\u001B[0;34m(self)\u001B[0m\n\u001B[1;32m     69\u001B[0m sample, label \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mX_train[i], \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39my_train[i]\n\u001B[1;32m     70\u001B[0m prediction \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mpredict(\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mX_train[i])\n\u001B[0;32m---> 71\u001B[0m loss, gradient \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mloss\u001B[49m\u001B[43m(\u001B[49m\u001B[43msample\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mlabel\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mprediction\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     72\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m np\u001B[38;5;241m.\u001B[39marray_equal(label, prediction):\n\u001B[1;32m     73\u001B[0m     \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mupdate(gradient)\n",
-      "\u001B[0;31mKeyboardInterrupt\u001B[0m: "
+      "Train accuracy: 0.739\n",
+      "Train accuracy: 0.98\n",
+      "Train accuracy: 1.0\n",
+      "Train accuracy: 1.0\n",
+      "Training completed with train accuracy: 1.0\n"
      ]
     }
    ],
@@ -83,27 +66,37 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-03T17:02:14.384269249Z",
-     "start_time": "2023-12-03T16:59:35.223558850Z"
+     "end_time": "2023-12-07T15:21:36.460513366Z",
+     "start_time": "2023-12-07T15:21:23.152689697Z"
     }
    },
    "id": "219ca97da5d76299"
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 4,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Character error 5.76%\n",
+      "Sequence error 13.00%\n"
+     ]
+    }
+   ],
    "source": [
-    "classifier.evaluate_test()"
+    "print(f\"Character error {classifier.char_error() * 100:.2f}%\")\n",
+    "print(f\"Sequence error {classifier.seq_error() * 100:.2f}%\")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-03T17:02:14.391019948Z",
-     "start_time": "2023-12-03T17:02:14.386870132Z"
+     "end_time": "2023-12-07T15:21:36.745833793Z",
+     "start_time": "2023-12-07T15:21:36.460028018Z"
     }
    },
-   "id": "f15a0d060f1a66cf"
+   "id": "3efcf36724c17a8d"
   }
  ],
  "metadata": {
