--- a/task_1.ipynb
+++ b/task_1.ipynb
@@ -2,16 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-11-28T15:40:17.620770526Z",
-     "start_time": "2023-11-28T15:40:01.982438288Z"
+     "end_time": "2023-12-07T10:00:12.478132319Z",
+     "start_time": "2023-12-07T09:59:54.362227803Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "from src.utils import load_examples, create_mapping\n",
     "\n",
@@ -20,12 +29,15 @@
     "X_test, y_test, img_test = load_examples('ocr_names_images/tst')\n",
     "\n",
     "# Create mapping\n",
-    "mapping = create_mapping(y_train)"
+    "mapping = create_mapping(y_train)\n",
+    "\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "from src.task_1 import IndependentLinearClassifier\n",
@@ -35,15 +47,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-28T15:40:17.924051121Z",
-     "start_time": "2023-11-28T15:40:17.622805875Z"
+     "end_time": "2023-12-07T10:00:13.239442946Z",
+     "start_time": "2023-12-07T10:00:12.477393411Z"
     }
    },
    "id": "ccaa9a2315528f88"
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
@@ -62,36 +74,51 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-28T15:40:41.076793814Z",
-     "start_time": "2023-11-28T15:40:17.924664224Z"
+     "end_time": "2023-12-07T10:00:41.713824211Z",
+     "start_time": "2023-12-07T10:00:13.240480313Z"
     }
    },
    "id": "64d29f868c2b50ea"
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "outputs": [
     {
-     "data": {
-      "text/plain": "0.7379603399433428"
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Character error 26.20%\n",
+      "Sequence error 70.80%\n"
+     ]
     }
    ],
    "source": [
-    "classifier.evaluate_test()"
+    "print(f\"Character error {classifier.char_error() * 100:.2f}%\")\n",
+    "print(f\"Sequence error {classifier.seq_error() * 100:.2f}%\")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-28T15:40:41.384802250Z",
-     "start_time": "2023-11-28T15:40:41.078993961Z"
+     "end_time": "2023-12-07T10:00:42.238044602Z",
+     "start_time": "2023-12-07T10:00:41.715136829Z"
     }
    },
    "id": "d1cc965bbdff132b"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-07T10:00:42.241823703Z",
+     "start_time": "2023-12-07T10:00:42.236280615Z"
+    }
+   },
+   "id": "86c31b900a0d99cf"
   }
  ],
  "metadata": {
